--- a/03.01.05. Florencia/florencia.html
+++ b/03.01.05. Florencia/florencia.html
@@ -18,9 +18,11 @@
       Hablaremos aquí de tres de las principales iglesias de Florencia.
     </p>
 
-    <h2>Santa Maria del Fiore</h2>
+    <h2>
+      <img class="izquierda" src="Imagenes/santa-maria-del-fiore.jpg" /> Santa
+      Maria del Fiore
+    </h2>
 
-    <img class="izquierda" src="Imagenes/santa-maria-del-fiore.jpg" />
     <p>
       La construcción de <strong>Santa Maria del Fiore</strong> comenzó en 1296
       y prosiguió a lo largo del siglo XIV hasta convertirla en la iglesia más
@@ -37,7 +39,7 @@
 
     <h2>Santa Croce</h2>
 
-    <img class="centro" src="Imagenes/santa-croce.jpg" />
+    <p class="centro"><img src="Imagenes/santa-croce.jpg" /></p>
     <p>
       La basílica de la <strong>Santa Croce</strong> se construyó en la misma
       época que Santa Maria del Fiore, en unos terrenos pantanosos entonces
@@ -53,7 +55,7 @@
 
     <h2>Santa Maria Novella</h2>
 
-    <img class="derecha" src="Imagenes/santa-maria-novella.jpg" />
+    <p><img class="derecha" src="Imagenes/santa-maria-novella.jpg" /></p>
     <p>
       La iglesia de <strong>Santa Maria Novella</strong> comenzó a construirse
       en 1246 y se terminó de construir en 1360, aunque la fachada no se acabó
