--- a/03.01.06 Autores 2/escritores-2.html
+++ b/03.01.06 Autores 2/escritores-2.html
@@ -12,20 +12,20 @@
     <nav>
       <p>
         Siglo XVIII:
-        <a href="fernan-caballero.html"
+        <a href="fernan.html"
           ><img src="img/fernan-caballero-mini.jpg"
         /></a>
       </p>
 
       <p>
         Siglo XIX:
-        <a href="gustavo-adolfo-becquer.html"
+        <a href="becquer.html"
           ><img src="img/becquer-mini.jpg"
         /></a>
-        <a href="emilia-pardo-bazan.html"
+        <a href="emilia.html"
           ><img src="img/pardo-bazan-mini.jpg"
         /></a>
-        <a href="vicente-blasco-ibanez.html"
+        <a href="vicente.html"
           ><img src="img/blasco-ibanez-mini.jpg"
         /></a>
       </p>
@@ -39,7 +39,5 @@
         Información obtenida en la Wikipedia
       </p>
     </footer>
-
-    Volver
   </body>
 </html>
