--- a/03.02. Ejercicio1 (selectores)/index.html
+++ b/03.02. Ejercicio1 (selectores)/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/css.css" />
     <title>UD02 - Selectores 01 </title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -16,13 +18,12 @@
         <nav>
             <ul>
                 <li class="navegacion"><a href="https://bbc.co.uk" lang="en-GB" rel="alternate">Noticias</a></li>
-                <li class="navegacion"><a href="https://educacionadistancia.juntadeandalucia.es/centros/jaen/pluginfile.php/814466/mod_assign/intro/pagina2.html" lang="es-ES" rel="next">Otras noticias</a></li>
-                <li class="navegacion"><a href="https://educacionadistancia.juntadeandalucia.es/centros/jaen/pluginfile.php/814466/mod_assign/intro/tienda.html" lang="es-ES" rel="tag">Tienda</a></li>
-                <li class="navegacion"><a href="https://educacionadistancia.juntadeandalucia.es/centros/jaen/pluginfile.php/814466/mod_assign/intro/tienda.html?destacados=True" lang="es-ES" rel="bookmark">Productos destacados</a></li>
-                <li class="navegacion"><a href="https://educacionadistancia.juntadeandalucia.es/centros/jaen/pluginfile.php/814466/mod_assign/intro/ayuda.pdf" lang="es-ES" rel="help">Ayuda</a></li>
-                <li class="navegacion"><a href="https://educacionadistancia.juntadeandalucia.es/centros/jaen/pluginfile.php/814466/mod_assign/intro/ayuda.pdf" lang="es-ES">Ayuda Avanzada</a></li>
-                <li class="navegacion"><a href="https://educacionadistancia.juntadeandalucia.es/centros/jaen/pluginfile.php/814466/mod_assign/intro/busqueda.html" lang="es-ES" rel="search">Búsqueda de productos</a></li>
-                <li class="navegacion"><a href="https://educacionadistancia.juntadeandalucia.es/centros/jaen/pluginfile.php/814466/mod_assign/intro/GoogleNoEntres.doc" lang="en-AU" rel="nofollow">Documento interno secreto</a></li>
+                <li class="navegacion"><img src="iconos/circle-plus-solid.svg" alt=""><a href="https://educacionadistancia.juntadeandalucia.es/centros/jaen/pluginfile.php/814466/mod_assign/intro/pagina2.html" lang="es-ES" rel="next">Otras noticias</a></li>
+                <li class="navegacion"><img src="iconos/cart-shopping-solid.svg" alt=""/><a href="https://educacionadistancia.juntadeandalucia.es/centros/jaen/pluginfile.php/814466/mod_assign/intro/tienda.html" lang="es-ES" rel="tag">Tienda</a></li>
+                <li class="navegacion"><img src="iconos/star-solid.svg" alt=""><a href="https://educacionadistancia.juntadeandalucia.es/centros/jaen/pluginfile.php/814466/mod_assign/intro/tienda.html?destacados=True" lang="es-ES" rel="bookmark">Productos destacados</a></li>
+                <li class="navegacion"><img src="iconos/file-pdf-solid.svg" alt=""><a href="https://educacionadistancia.juntadeandalucia.es/centros/jaen/pluginfile.php/814466/mod_assign/intro/ayuda.pdf" lang="es-ES" rel="help">Ayuda</a></li>
+                <li class="navegacion"><img src="iconos/magnifying-glass-solid.svg" alt=""><a href="https://educacionadistancia.juntadeandalucia.es/centros/jaen/pluginfile.php/814466/mod_assign/intro/busqueda.html" lang="es-ES" rel="search">Búsqueda de productos</a></li>
+                <li class="navegacion"><img src="iconos/shield-virus-solid.svg" alt=""><a href="https://educacionadistancia.juntadeandalucia.es/centros/jaen/pluginfile.php/814466/mod_assign/intro/GoogleNoEntres.doc" lang="en-AU" rel="nofollow">Documento interno secreto</a></li>
             </ul>
         </nav>
     </header>
