--- a/05.02. Actividad 1/index.html
+++ b/05.02. Actividad 1/index.html
@@ -18,10 +18,10 @@
       <div class="row verde"></div>
       <div class="row">
         <div class="col-lg-2 rojo"></div>
-        <div class="col-lg">
-          <div class="col-lg rosa"></div>
-          <div class="col-lg-5 naranja"></div>
-          <div class="col-lg-5 naranja"></div>
+        <div class="col-lg-10 row">
+          <div class="col-lg-12 rosa"></div>
+          <div class="col-lg-6 naranja"></div>
+          <div class="col-lg-6 naranja"></div>
         </div>
       </div>
       <div class="row verde2"></div>
