--- a/05.02. Actividad 1/index.html
+++ b/05.02. Actividad 1/index.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" type="text/css" href="css/css.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row verde"></div>
-      <div class="row">
-        <div class="col-lg-2 rojo"></div>
-        <div class="col-lg-10 row">
-          <div class="col-lg-12 rosa"></div>
-          <div class="col-lg-6 naranja"></div>
-          <div class="col-lg-6 naranja"></div>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>05.02 - Actividad 1</title>
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/estilos.css">
+    </head>
+    <body>
+        <div class="container col-lg-12 col-md-10">
+            <div class="verde col-lg-12 col-md-10"></div>
+            <div class="col-lg-12 col-md-10">
+                <div class="row">
+                    <div class="col-lg-2 col-md-1 rojo"></div>
+                    <div class="col-lg-10 col-md-5 morado"></div>
+                </div>
+            </div>
+            <div class="col-lg-12 col-md-6">
+                <div class="row">
+                    <div class="col-lg-6 col-md-2 amarillo"></div>
+                    <div class="col-lg-6 col-md-2 amarillo"></div>
+                </div>
+            </div>
+            <div class="col-lg-12 col-md-6">
+                <div class="row">
+                    <div class="col-lg-2 azul"></div>
+                    <div class="col-lg-2 azul"></div>
+                    <div class="col-lg-4 azul"></div>
+                    <div class="col-lg-2 azul"></div>
+                    <div class="col-lg-2 azul"></div>
+
+                </div>
+            </div>
+            <div class="col-lg-12 col-md-6">
+                <div class="row">
+                    <div class="col-lg-2 azul"></div>
+                    <div class="col-lg-2 azul"></div>
+                    <div class="col-lg-4 azul"></div>
+                    <div class="col-lg-2 azul"></div>
+                    <div class="col-lg-2 azul"></div>
+
+                </div>
+            </div>
+            <div class="verde col-lg-12 col-md-10"></div>
         </div>
-      </div>
-      <div class="row verde2"></div>
-    </div>
-  </body>
+    </body>
 </html>
